# test-plugin-wasm

./: .gitignore  Cargo.toml  readme.md
src/: db_handler.rs  inference-handler  inference_handler.rs  main.rs  model_loader.rs
