[package]
name = "test-plugin-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.1.4", features = ["kv-mem", "ml"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
burn-tensor = "0.15.0"
surrealml-core = "0.1.3"
ndarray = "0.15.6" # this package has to be downgraded to v0.15.6 else conflicts with ndarray dependency in surrealml-core.
